# htmx-learn

./: Cargo.toml
src/: main.rs
static/: index.html
